# SDL-Platformer-Game

./: .gitignore  CMakeLists.txt  README.md
RequiredFiles/: GenerationPercs.txt  PlayerScores.txt
src/: GameCore.cpp  GameCore.h  Player.cpp  Player.h  Track.cpp  Track.h  TrackBonusItems.cpp  TrackBonusItems.h  main.cpp
